# Sofa.RigidBodyDynamics

./: .gitignore  CMakeLists.txt  README.md  Sofa.RigidBodyDynamicsConfig.cmake.in  pixi.toml
.github/workflows/: macos-linux-windows-pixi.yml
examples/sofa/RigidBodyDynamics/: header.py  robot.py  robotGUI.py  robotWithConstraints.py
examples/sofa/RigidBodyDynamics/InverseKineHand/: InverseGeomInitialFingers.py  InverseKineHand.py  bar.stl  bar.vtk
examples/sofa/RigidBodyDynamics/JointActuator/: JointActuator.py  simple_arm.urdf
examples/sofa/RigidBodyDynamics/JointActuator/mesh/: arm_meters.stl
examples/sofa/RigidBodyDynamics/LoadRobot/: header.py  robot.py  robotGUI.py  robotWithConstraints.py  schunkHandWithConstraints.py
examples/sofa/RigidBodyDynamics/robots_description/schunk_hand/: schunk_svh_hand_right_regularized_inertia.urdf
src/sofa/RigidBodyDynamics/: BaseShapesConversions.cpp  BaseShapesConversions.h  CollisionPair.h  Conversions.h  GeometryConversions.cpp  GeometryConversions.h  KinematicChainMapping.cpp  KinematicChainMapping.h  KinematicChainMapping.inl  RobotWrapper.h  Types.h  URDFModelLoader.cpp  URDFModelLoader.h  config.h.in  init.cpp
